<resources>
    <string name="app_name">Weather App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uv_index">UV index</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="temp">Temperature</string>
    <string name="feels_like">Feels like</string>
    <string name="max_min">max/min</string>
    <string name="pressure">Pressure</string>
</resources>