<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pic"
    tools:context=".activity.SearchResultActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:elevation="20dp"
        app:cardCornerRadius="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_chosen_city_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="@dimen/_55sdp"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_gravity="end"
                    app:srcCompat="@drawable/ic_few_clouds" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_chosen_city_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_temp"
                    app:tint="@color/red"
                    android:contentDescription="@string/temp"/>

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/temp"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/tv_chosen_city_temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/feels_like"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/tv_chosen_city_feels_like"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/max_min"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/tv_chosen_city_max_min"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>