<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ShowChosenDayInfoActivity"
    android:background="@drawable/background_pic">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:elevation="20dp"
            app:cardCornerRadius="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_8sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_chosen_day"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    <ImageView
                        android:id="@+id/img_chosen_day"
                        android:layout_width="@dimen/_55sdp"
                        android:layout_height="@dimen/_55sdp"
                        android:layout_gravity="end"
                        app:srcCompat="@drawable/ic_few_clouds" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_chosen_day_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_8sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:contentDescription="@string/temp"
                        app:srcCompat="@drawable/ic_pressure"
                        app:tint="@color/red" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/pressure"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:id="@+id/tv_chosen_day_pressure"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="end"
                        android:padding="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_margin="@dimen/_3sdp"
                    android:background="#9C9898" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_8sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:src="@drawable/ic_uvi"
                        app:tint="#FFC107" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="UV index"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:id="@+id/tv_chosen_day_uvi"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end|center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_margin="@dimen/_3sdp"
                    android:background="#9C9898" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_8sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:src="@drawable/ic_humidity"
                        app:tint="#2196F3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/humidity"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:id="@+id/tv_chosen_day_humidity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end|center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>